edit package.json scripts to use env-cmd + remove confModule import from app.module

--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "env-cmd -f ./environments/.env.production nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --builder swc --typeCheck --watch",
-    "start:debug": "nest start --builder swc --typeCheck --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "env-cmd -f ./environments/.env.development nest start",
+    "start:dev": "env-cmd -f ./environments/.env.development nest start --builder swc --typeCheck --watch",
+    "start:debug": "env-cmd -f ./environments/.env.development nest start --builder swc --typeCheck --debug --watch",
+    "start:prod": "env-cmd -f ./environments/.env.production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "typeorm-ts-node-esm"
+    "test": "env-cmd -f ./environments/.env.development jest",
+    "test:watch": "env-cmd -f ./environments/.env.development jest --watch",
+    "test:cov": "env-cmd -f ./environments/.env.development jest --coverage",
+    "test:debug": "env-cmd -f ./environments/.env.development node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "env-cmd -f ./environments/.env.development jest --config ./test/jest-e2e.json",
+    "typeorm": "env-cmd -f ./environments/.env.development typeorm-ts-node-esm"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
