--- a/environments/.env.template
+++ b/environments/.env.template
@@ -1,6 +1,8 @@
 NODE_ENV=development
 TYPEORM_USE_CLI=false
 PORT_LISTEN=3003
+STATIC_DIRNAME=public
+UPLOAD_MAX_FILE_SIZE=10485760 # 10MB
 
 DB_HOST=
 DB_PORT=
