--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "maildev": "^2.1.0",
     "mysql2": "^3.6.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "webpack": "^5.88.2"
   },
   "devDependencies": {
     "@golevelup/ts-jest": "^0.4.0",
