--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typeorm": "env-cmd -f ./environments/.env.typeormcli typeorm-ts-node-esm"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -34,6 +35,7 @@
     "class-validator": "^0.14.0",
     "maildev": "^2.1.0",
     "mysql2": "^3.6.1",
+    "nodemailer": "^6.9.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17",
