--- a/environments/.env.template
+++ b/environments/.env.template
@@ -1,14 +1,25 @@
 NODE_ENV=development
+#
 TYPEORM_USE_CLI=false
 PORT_LISTEN=3003
 STATIC_DIRNAME=public
 UPLOAD_MAX_FILE_SIZE=10485760 # 10MB
-
+#
 DB_HOST=
 DB_PORT=
 DB_USERNAME=
 DB_PASSWORD=
 DB_NAME=
-
+#
 JWT_SECRET=6mHdkqwv3rhbq2nzJDpfS2aBFDVdDBz6
 JWT_EXPIRE=24h
+# normalement l'adresse de livraison du site en production
+WEBSITE_DOMAIN=nestjstemplateapi.com
+# compte email pour l'expédition
+MAIL_SENDER=youremail@domain.com
+MAIL_SENDER_PASSWORD=1111 # amail account password
+MAIL_SENDER_DOMAIN=domain.com
+# email d'expéditeur vu par le client
+#
+MAIL_ACCOUNT_SENDER=websiteacountcontrolsecurity@website.com
+MAIL_NEWSLETTER_SENDER=websitenewsletter@website.com
