--- a/environments/.env.template
+++ b/environments/.env.template
@@ -15,6 +15,7 @@ JWT_SECRET=6mHdkqwv3rhbq2nzJDpfS2aBFDVdDBz6
 JWT_EXPIRE=24h
 # normalement l'adresse de livraison du site en production
 WEBSITE_DOMAIN=nestjstemplateapi.com
+MAIL_TEMPLATE_DIRECTORY=/templates
 # compte email pour l'expédition
 MAIL_SENDER=youremail@domain.com
 MAIL_SENDER_PASSWORD=1111 # amail account password
