Creation du module Mail
creation mail.service
creation reset_password.hbs
creation password.token.entity
 mise à jour module authentication
  ajout entité password.token.entity
.gitignore
  ajout *.hbs.json // mock data pour les templates
.env.template
 ajout variables pour la couche mail
 ajout de commentaires pour l'aide à l'édition
appmodule
 ajout du MaileModule aux imports
 ajout d'une méthode qui retourne
  un objet de configuration pour le mailerModule

--- a/environments/.env.template
+++ b/environments/.env.template
@@ -1,3 +1,12 @@
+# Exemple de ficheir de configuration pour le backend
+# TOUTES les valeurs présentes dans ce template
+# DOIVENT êtres présente dans les autres .env.*
+# si une seule manque vous aurez des erreurs à l'initialisation
+# et un comportement imprévisible du programme
+# à ce jour 
+# il vous faut au moins deux fichiers dans le dossier environement :
+# .env.development
+# .env.production
 NODE_ENV=development
 #
 TYPEORM_USE_CLI=false
@@ -15,11 +24,21 @@ JWT_SECRET=6mHdkqwv3rhbq2nzJDpfS2aBFDVdDBz6
 JWT_EXPIRE=24h
 # normalement l'adresse de livraison du site en production
 WEBSITE_DOMAIN=nestjstemplateapi.com
-MAIL_TEMPLATE_DIRECTORY=/templates
+# le repertoire des templates pour les emails
+MAIL_TEMPLATE_DIRECTORY=/mail/templates
+# domain d'expexditeur des email habituellement le truc après @ dans les adresse
+MAIL_HOST=localhost
+# port du host pour la connexion, dépend du fournisseur
+#  maildev reqgarde 1025 par défaut
+MAIL_PORT=1025
+# DEV permet d'avoir une préview des email dans un navigateur
+MAIL_PREVIEW=true
+## security
+MAIL_IGNORETLS=true
+MAIL_SECURE=false
 # compte email pour l'expédition
 MAIL_SENDER=youremail@domain.com
 MAIL_SENDER_PASSWORD=1111 # amail account password
-MAIL_SENDER_DOMAIN=domain.com
 # email d'expéditeur vu par le client
 #
 MAIL_ACCOUNT_SENDER=websiteacountcontrolsecurity@website.com
