--- a/environments/.env.template
+++ b/environments/.env.template
@@ -22,23 +22,23 @@ DB_NAME=
 #
 JWT_SECRET=6mHdkqwv3rhbq2nzJDpfS2aBFDVdDBz6
 JWT_EXPIRE=24h
-# normalement l'adresse de livraison du site en production
-WEBSITE_DOMAIN=nestjstemplateapi.com
+#
+# domain d'expexditeur des email habituellement le truc après @ dans les adresse
+MAIL_SMTP_HOST=localhost
+# port du host pour la connexion, dépend du fournisseur
+#  maildev reqgarde 1080 par défaut
+MAIL_SMTP_PORT=1080
+# compte email pour l'expédition
+MAIL_SMTP_USER=youremail@domain.com
+MAIL_SMTP_PASSWORD=1111 # email account password
+#
 # le repertoire des templates pour les emails
 MAIL_TEMPLATE_DIRECTORY=/mail/templates
-# domain d'expexditeur des email habituellement le truc après @ dans les adresse
-MAIL_HOST=localhost
-# port du host pour la connexion, dépend du fournisseur
-#  maildev reqgarde 1025 par défaut
-MAIL_PORT=1025
 # DEV permet d'avoir une préview des email dans un navigateur
 MAIL_PREVIEW=true
 ## security
 MAIL_IGNORETLS=true
 MAIL_SECURE=false
-# compte email pour l'expédition
-MAIL_SENDER=youremail@domain.com
-MAIL_SENDER_PASSWORD=1111 # amail account password
 # email d'expéditeur vu par le client
 #
 MAIL_ACCOUNT_SENDER=websiteacountcontrolsecurity@website.com
