--- a/environments/.env.template
+++ b/environments/.env.template
@@ -25,23 +25,26 @@ JWT_EXPIRE_AUTH=24h
 JWT_SECRET_PWD_RESET=HgCY6mmq76fGv86tbjzK5f9jrUgqynen
 JWT_EXPIRE_PWD_RESET=24h
 #
+MAIL_DRIVER=smtp
 # domain d'expexditeur des email habituellement le truc après @ dans les adresse
-MAIL_SMTP_HOST=localhost
+MAIL_SMTP_HOST="127.0.0.1"
 # port du host pour la connexion, dépend du fournisseur
 #  maildev reqgarde 1080 par défaut
 MAIL_SMTP_PORT=1025
+# auth
+#  notez la présence des quotes, elles sont NECESSAIRE
+#  l'authentifiacation echoueras si elle n'y sont pas
 # compte email pour l'expédition
-MAIL_SMTP_USER=youremail@domain.com
-MAIL_SMTP_PASSWORD=1111 # email account password
+MAIL_SMTP_USER='project.1'
+# email account password
+MAIL_SMTP_PASSWORD='secret.1'
 #
 # le repertoire des templates pour les emails
 MAIL_TEMPLATE_DIRECTORY=mail/templates
-# DEV permet d'avoir une préview des email dans un navigateur
-MAIL_PREVIEW=true
-## security
-MAIL_IGNORETLS=true
-MAIL_SECURE=false
+MAIL_PARTIAL_DIRECTORY=partials
+
 # email d'expéditeur vu par le client
-#
-MAIL_ACCOUNT_SENDER=websiteacountcontrolsecurity@website.com
-MAIL_NEWSLETTER_SENDER=websitenewsletter@website.com
+# tous ce qui est en rapport avec les comptes utilisateur
+MAIL_ACCOUNT_SENDER=websiteacountsecurity-noreply@website.com
+# les newsletter
+MAIL_NEWSLETTER_SENDER=websitenewsletter-nereply@website.com
