--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "env-cmd -f ./environments/.env.development jest --coverage",
     "test:debug": "env-cmd -f ./environments/.env.development node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "env-cmd -f ./environments/.env.development jest --config ./test/jest-e2e.json",
-    "typeorm": "env-cmd -f ./environments/.env.typeormcli typeorm-ts-node-esm"
+    "typeorm": "env-cmd -f ./environments/.env.typeormcli typeorm-ts-node-esm",
+    "maildev": "./node_modules/.bin/maildev --ip 127.0.0.1 --incoming-user project.1 --incoming-pass secret.1"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.9.1",
