--- a/package.json
+++ b/package.json
@@ -31,11 +31,10 @@
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.11",
     "@nestjs/typeorm": "^10.0.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "handlebars": "^4.7.8",
-    "maildev": "^2.1.0",
     "mysql2": "^3.6.1",
     "nodemailer": "^6.9.5",
     "reflect-metadata": "^0.1.13",
@@ -50,7 +49,7 @@
     "@nestjs/testing": "^10.2.5",
     "@swc/cli": "^0.1.62",
     "@swc/core": "1.3.78",
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.7",
@@ -63,6 +62,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "maildev": "^2.1.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
