--- a/environments/.env.template
+++ b/environments/.env.template
@@ -3,7 +3,7 @@
 # DOIVENT êtres présente dans les autres .env.*
 # si une seule manque vous aurez des erreurs à l'initialisation
 # et un comportement imprévisible du programme
-# à ce jour 
+# à ce jour
 # il vous faut au moins deux fichiers dans le dossier environement :
 # .env.development
 # .env.production
@@ -48,3 +48,8 @@ MAIL_PARTIAL_DIRECTORY=partials
 MAIL_ACCOUNT_SENDER=websiteacountsecurity-noreply@website.com
 # les newsletter
 MAIL_NEWSLETTER_SENDER=websitenewsletter-nereply@website.com
+
+# config api externe
+EXTERNAL_API_BASE_URL=https://random-data-api.com/api/v2
+EXTERNAL_API_TIMEOUT=5000
+EXTERNAL_API_MAX_REDIRECT=5
